# client-python-fix

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  client.py  messages.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: python-package.yml  rufflint.yml  security-check.yml
spec/: FIX44-PT.xml
tests/: test_client.py  test_utils_messages.py
